Start implementing media display

--- a/eww.scss
+++ b/eww.scss
@@ -40,6 +40,10 @@ $fg: #ffffff;
     border: 2px solid lighten(gray, 15%);
 }
 
+.image-96 {
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 
 // ----------------------------------------
 
