--- a/eww.scss
+++ b/eww.scss
@@ -74,6 +74,10 @@ $fg: #ffffff;
     padding-top: 15px;
 }
 
+.pad-left-sm {
+    padding-left: 15px;
+}
+
 .pad-xl {
     padding: 50px;
 }
@@ -82,6 +86,10 @@ $fg: #ffffff;
     font-size: larger;
 }
 
+
+.min-title {
+    min-width: 200px;
+}
 
 // ----------------------------------------
 
@@ -109,6 +117,21 @@ $fg: #ffffff;
     color: $cyan;
 }
 
+.light-l1 {
+    color: $fg;
+}
+
+.light-l2 {
+    color: $fg_dark;
+}
+
+.dark-l1 {
+    color: #000000;
+}
+
+.dark-l2 {
+    color: $bg;
+}
 
 // ----------------------------------------
 
