Refactor complete layout

--- a/eww.scss
+++ b/eww.scss
@@ -78,9 +78,8 @@ $fg: #ffffff;
     padding-left: 15px;
 }
 
-.no-pad {
-    padding: 0px;
-    margin: 0px;
+.pad-left {
+    padding-left: 30px;
 }
 
 .pad-xl {
