--- a/eww.scss
+++ b/eww.scss
@@ -1,13 +1,16 @@
 $bg: #282c34;
 $bg_light: #434a57;
+$fg: #ffffff;
+$fg_dark: #abb2bf;
+$tb: rgba(#1d1c1c, .8);
+
+// atom one dark theme
 $red: #e06c75;
 $green: #98c379;
 $yellow: #e5c07b;
 $blue: #61afef;
 $purple: #c678dd;
 $cyan: #56b6c2;
-$fg_dark: #abb2bf;
-$fg: #ffffff;
 
 
 * { all: unset; }
@@ -26,12 +29,11 @@ $fg: #ffffff;
 .widget {
     border-radius: 20px;
     padding: 30px;
-    // box-shadow: 0 0 15px 5px #111111;
 }
 
 .widget-dark {
     @extend .widget;
-    background-color: rgba(#1d1c1c, .8);
+    background-color: $tb;
     border: 2px solid $bg_light;
 }
 
@@ -52,8 +54,7 @@ $fg: #ffffff;
 .termbar {
     border-radius: 20px;
     padding: 10px 25px;
-    box-shadow: 0 0 20px 10px #111111;
-    background-color: black;
+    background-color: rgba(#000000, 0.85);
     border: 2px solid $bg_light;
 }
 
@@ -163,15 +164,14 @@ $fg: #ffffff;
 // ----------------------------------------
 
 .launcher {
-    border-radius: 20px;
-    padding: 15px;
-    box-shadow: 0 0 15px 5px #111111;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 @mixin launcher-color($color) {
     @extend .launcher;
-    background-color: $color;
-    border: 2px solid lighten($color, 10%);
+    background-color: $tb;
+    border: 2px solid $color;
 }
 
 .launcher-shutdown {
@@ -187,26 +187,23 @@ $fg: #ffffff;
     @include launcher-color($yellow);
 }
 .launcher-update {
-    @include launcher-color(gray);
+    @include launcher-color(#808080);
 }
 
 .launcher-alacritty {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    padding: 15px;
-    background-color: #e57228;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding: 10px;
 }
 .launcher-folder {
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    padding: 15px;
-    background-color: $bg;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: 10px;
 }
 .launcher-combined {
-    border-radius: 20px;
-    box-shadow: 0 0 15px 5px #111111;
-    border: 2px solid lighten(gray, 10%);
-    background-color: lighten(gray, 10%);
+    border-radius: 10px;
+    border: 2px solid #c65a18;
+    background-color: $tb;
 }
 .launcher-discord {
     @include launcher-color(#5865F2);
